2002-10-01 Axel Simon <A.Simon@ukc.ac.uk> 

	* gtk/gdk/GdkEnums.chs, gtk/general/Gtk.hs,
	gtk/general/Structs.hsc, gtk/Makefile, gtk/gdk/GdkGC.chs,
	gtk/gdk/GdkDrawable.chs,gtk/gdk/Region.chs,
	gtk/misc/DrawingArea.chs: Added the capabilities to do user
	specified widgets.

2002-08-20  Jonas Svensson <d99josve@dtek.chalmers.se>

        * gtk/abstract/Widget.chs: Added widgetSetSizeRequest function.

2002-08-15  Jonas Svensson <d99josve@dtek.chalmers.se>

        * gtk/menuComboToolbar/ImageMenuItem.chs: Changed type from
        Image to Widget on get/setImage functions. Changed getImage
        to return IO (Maybe Widget).

2002-08-13  Axel Simon <A.Simon@ukc.ac.uk> on behalf of 
	    Jonas Svensson <d99josve@dtek.chalmers.se>
	
        * gtk/Makefile: Added ImageMenuItem to list of moduels

        * gtk/typehier/hierarchy.list: Added GtkImageMenuItem
 
        * gtk/general/Gtk.hs: Now imports and exports ImageMenuItem

        * gtk/menuComboToolbar/ImageMenuItem.chs: Implementation of
          the GtkImageMenuItem widget.
	
2002-08-12  Axel Simon <A.Simon@ukc.ac.uk>
	* gtk/multiline/TextView.chs: Added SetEditable, GetEditable,
	SetCursorVisible, GetCursorVisible which was a patch from Jonas
	Svensson <d99josve@dtek.chalmers.se>

2002-08-05  Axel Simon <A.Simon@ukc.ac.uk>

	* gtk/Makefile, mk/library.mk, mk/common.mk: Smaller fixed for the
	broken ghc-pkg of ghc version 5.04. ghci still doesn't work.

	* most .chs files in gtk/: Slight changes of documentation to make
	the documentation tools work (the latter are not yet in CVS).
	
2002-08-02  Jens Petersen <petersen@haskell.org>

	* gtk/windows/FileSel.chs: Re-export fileSelectionGetButtons.

	* gtk/general/Structs.hsc(fileSelectionGetButtons):  
	Like fileSelectionQueryButtons in gtk+hs.  Export it.

2002-07-23  Axel Simon <A.Simon@ukc.ac.uk>

	* gtk/treeList/TreeSelection.chs: Added the "changed"
	signal. Realized that there are many other modules without
	signals.
