@@ -1,0 +1,11 @@
+TOP = ../..
+
+include $(TOP)/mk/config.mk
+
+MAIN = Drawing.hs
+
+APPNAME = drawing 
+
+NEEDPACKAGES = lang gtk2
+
+include $(TOP)/mk/common.mk
